--- a/index.html
+++ b/index.html
@@ -47,6 +47,81 @@
         </div>
       </div>
 
+      
+      <div class="card-right_conatiner">
+        <div class="card-right_top">
+          <img src="./images/icon-play.svg" alt="icon of play">
+        </div>
+        <div class="card-right_bottom">
+          <p class="title">Play</p>
+          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <p class="hours">10hrs</p>
+          <p class="last-week">Last Week - 8hrs</p>
+        </div>
+      </div>
+
+      <div class="card-right_conatiner">
+        <div class="card-right_top">
+          <img src="./images/icon-study.svg" alt="icon of study">
+        </div>
+        <div class="card-right_bottom">
+          <p class="title">Study</p>
+          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <p class="hours">32hrs</p>
+          <p class="last-week">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card-right_conatiner">
+        <div class="card-right_top">
+          <img src="./images/icon-exercise.svg" alt="icon of exercise">
+        </div>
+        <div class="card-right_bottom">
+          <p class="title">Exercise</p>
+          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <p class="hours">32hrs</p>
+          <p class="last-week">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card-right_conatiner">
+        <div class="card-right_top">
+          <img src="./images/icon-social.svg" alt="icon of social">
+        </div>
+        <div class="card-right_bottom">
+          <p class="title">Social</p>
+          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <p class="hours">32hrs</p>
+          <p class="last-week">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card-right_conatiner">
+        <div class="card-right_top">
+          <img src="./images/icon-self-care.svg" alt="icon of icon-self-care">
+        </div>
+        <div class="card-right_bottom">
+          <p class="title">Self Care</p>
+          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <p class="hours">32hrs</p>
+          <p class="last-week">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card-right_conatiner">
+        <div class="card-right_top">
+          <img src="./images/icon-work.svg" alt="icon of suitcase">
+        </div>
+        <div class="card-right_bottom">
+          <p class="title">Work</p>
+          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <p class="hours">32hrs</p>
+          <p class="last-week">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+
+
 
     </div>
 
