Styling right card

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="card-container">
     <div class="card-left">
       <div class="card-left_top">
-        <img src="./images/image-jeremy.png" alt="photo of smiling man">
+        <img class="photo-avatar" src="./images/image-jeremy.png" alt="photo of smiling man">
         <p class="report">Report for</p>
         <p class="name-surname">Jeremy Robson</p>
       </div>
@@ -108,16 +108,7 @@
         </div>
       </div>
 
-      <div class="card-right_conatiner">
-        <div class="card-right_top">
-          <img src="./images/icon-work.svg" alt="icon of suitcase">
-        </div>
-        <div class="card-right_bottom">
-          <p class="title">Work</p>
-          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
-          <p class="hours">32hrs</p>
-          <p class="last-week">Last Week - 36hrs</p>
-        </div>
+     
       </div>
 
 
