Styling each card

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <div class="card-right_conatiner">
         <div class="card-right_top">
-          <img src="./images/icon-work.svg" alt="icon of suitcase">
+          <img class="icon" src="./images/icon-work.svg" alt="icon of suitcase">
         </div>
         <div class="card-right_bottom">
           <p class="title">Work</p>
@@ -50,7 +50,7 @@
       
       <div class="card-right_conatiner">
         <div class="card-right_top">
-          <img src="./images/icon-play.svg" alt="icon of play">
+          <img class="icon" src="./images/icon-play.svg" alt="icon of play">
         </div>
         <div class="card-right_bottom">
           <p class="title">Play</p>
@@ -62,7 +62,7 @@
 
       <div class="card-right_conatiner">
         <div class="card-right_top">
-          <img src="./images/icon-study.svg" alt="icon of study">
+          <img class="icon" src="./images/icon-study.svg" alt="icon of study">
         </div>
         <div class="card-right_bottom">
           <p class="title">Study</p>
@@ -74,7 +74,7 @@
 
       <div class="card-right_conatiner">
         <div class="card-right_top">
-          <img src="./images/icon-exercise.svg" alt="icon of exercise">
+          <img class="icon" src="./images/icon-exercise.svg" alt="icon of exercise">
         </div>
         <div class="card-right_bottom">
           <p class="title">Exercise</p>
@@ -86,7 +86,7 @@
 
       <div class="card-right_conatiner">
         <div class="card-right_top">
-          <img src="./images/icon-social.svg" alt="icon of social">
+          <img  class="icon" src="./images/icon-social.svg" alt="icon of social">
         </div>
         <div class="card-right_bottom">
           <p class="title">Social</p>
@@ -96,9 +96,9 @@
         </div>
       </div>
 
-      <div class="card-right_conatiner">
+      <div class="card-right_conatiner ok">
         <div class="card-right_top">
-          <img src="./images/icon-self-care.svg" alt="icon of icon-self-care">
+          <img class="icon" src="./images/icon-self-care.svg" alt="icon of icon-self-care">
         </div>
         <div class="card-right_bottom">
           <p class="title">Self Care</p>
