--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="card-right_bottom">
           <p class="title">Work</p>
-          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <img class="icon-dots" src="./images/icon-ellipsis.svg" alt="icon of three dots">
           <p class="hours">32hrs</p>
           <p class="last-week">Last Week - 36hrs</p>
         </div>
@@ -54,7 +54,7 @@
         </div>
         <div class="card-right_bottom">
           <p class="title">Play</p>
-          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <img class="icon-dots" src="./images/icon-ellipsis.svg" alt="icon of three dots">
           <p class="hours">10hrs</p>
           <p class="last-week">Last Week - 8hrs</p>
         </div>
@@ -66,7 +66,7 @@
         </div>
         <div class="card-right_bottom">
           <p class="title">Study</p>
-          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <img class="icon-dots" src="./images/icon-ellipsis.svg" alt="icon of three dots">
           <p class="hours">32hrs</p>
           <p class="last-week">Last Week - 36hrs</p>
         </div>
@@ -78,7 +78,7 @@
         </div>
         <div class="card-right_bottom">
           <p class="title">Exercise</p>
-          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <img class="icon-dots" src="./images/icon-ellipsis.svg" alt="icon of three dots">
           <p class="hours">32hrs</p>
           <p class="last-week">Last Week - 36hrs</p>
         </div>
@@ -90,7 +90,7 @@
         </div>
         <div class="card-right_bottom">
           <p class="title">Social</p>
-          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <img class="icon-dots" src="./images/icon-ellipsis.svg" alt="icon of three dots">
           <p class="hours">32hrs</p>
           <p class="last-week">Last Week - 36hrs</p>
         </div>
@@ -102,7 +102,7 @@
         </div>
         <div class="card-right_bottom">
           <p class="title">Self Care</p>
-          <img src="./images/icon-ellipsis.svg" alt="icon of three dots">
+          <img class="icon-dots" src="./images/icon-ellipsis.svg" alt="icon of three dots">
           <p class="hours">32hrs</p>
           <p class="last-week">Last Week - 36hrs</p>
         </div>
